
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {unsigned int nprim; } ;
struct policydb {TYPE_1__ p_types; } ;



int policydb_type_isvalid(struct policydb *p, unsigned int type)
{
 if (!type || type > p->p_types.nprim)
  return 0;
 return 1;
}
